# jwtgen

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindEmbeddedClipboard.cmake  FindEmbeddedOpenSSL.cmake
dependencies/clip/windows-x86_64/: clip.lib
dependencies/libclipboard/cygwin-x86_64/include/: libclipboard-config.h
dependencies/libclipboard/windows-x86_64/: clipboard.lib
dependencies/openssl/: README.md
dependencies/openssl/cygwin-x86_64/include/openssl/: opensslconf.h
dependencies/openssl/darwin-x86_64/lib/pkgconfig/: ._libcrypto.pc  ._openssl.pc  libcrypto.pc  openssl.pc
dependencies/openssl/linux-x86_64/lib/: libcrypto.so.1.1  libssl.so.1.1
dependencies/openssl/linux-x86_64/lib/pkgconfig/: libcrypto.pc  libssl.pc
dependencies/openssl/windows-x86_64/lib/: libcrypto.lib  libssl.lib
dependencies/optionparser/: optionparser.h
include/: clipboard.h  clipboard_linux.h  clipboard_mac.h  clipboard_windows.h
src/: main.cpp
